# ocaml_calc

./: README.md  dune-project  ocaml_calc.opam
lib/calc/: calc.ml  dune
lib/eval/: dune  eval.ml
lib/lexer/: lexer.ml
lib/parser/: parser.ml
lib/token/: dune  token.ml
test/: dune  test_calc.ml
