(lang dune 3.16)

(name ocaml_calc)

(generate_opam_files true)

(source
 (github wct-james/ocaml_calc))

(authors "Will James")

(maintainers "Will James")

(license MIT)

(documentation https://url/to/documentation)

(package
 (name ocaml_calc)
 (synopsis "Small Arithmetic Interpreter project")
 (description "Small Arithmetic Interpreter project")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
